--- a/Hoola Lucian/Hoola Lucian.csproj
+++ b/Hoola Lucian/Hoola Lucian.csproj
@@ -64,7 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HpBarIndicator.cs" />
-    <Compile Include="Orbwalk.cs" />
+    <Compile Include="Orbwalking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
